@@ -1,5 +1,10 @@
 2011-12-05  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* resource.c (init_resource_info): Only consider EXIT_IGNORE_STACK
+	if there is in epilogue.
+
+2011-12-05  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* optabs.c (maybe_emit_sync_lock_test_and_set): Pass a null target
 	to emit_library_call_value.
 	(expand_atomic_compare_and_swap): Likewise.
